--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Sonali Arcot</h1>
-								<p>Welcome to my webpage 
+								<p>Welcome to my portfolio 
 							 </p>
 							</div>
 						</div>
