--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <h3>More About Me</h3>
 								<p>I love traveling. I would prefer to have a remote job for this very reason but I am flexible.</p>
 <h3>My Personality</h3>
-								<p>I am an ambivert. I was an introvert but over time I accustomed myself to be more and more open to social settings. I constantly work on developing my communication and interpersonal skills.</p>
+								<p>I am an ambivert. I was an introvert but over time I accustomed myself to be more and more open to social settings. I constantly work on improving my communication and interpersonal skills.</p>
 <h3>Hobbies</h3>
 								<p>I have been practicing and performing an Indian classical dance called Odissi since I was 7 years old. Being a performer is my second personality and is intrinsic to who I am as a person today.</p>
 							</article>
