--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright"> <a href="https://html5up.net"></a>.</p>
+						<p class="copyright">&copy; <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
